name:                wybe
version:             0.1.0.0
synopsis:            Wybe compiler and built system.
cabal-version:       >= 1.22.2.0
Category:            Compilers
build-type:          Simple

executable wybemk
  default-language:    Haskell2010
  main-is:             wybemk.hs
  hs-source-dirs: .
  build-depends: array >= 0.5.1.0
               , base >=4.6
               , binary >= 0.7.5.0
               , bytedump
               , bytestring
               , containers
               , directory >= 1.2.5.0
               , filepath >= 1.4.0.0
               , haskeline
               , hex
               , llvm-hs
               , llvm-hs-pure
               , llvm-hs-pretty
               , text
               -- , llvm-general == 3.5.1.2
               -- , llvm-general-pure
               , mtl
               , old-time
               , parsec >=3.1.3
               , process >= 1.4.2.0
               , transformers
               , cryptonite
               , tuple >= 0.3.0.2
               , extra >= 1.5.1
               , ansi-terminal
               , Diff
  other-modules: AST, BinaryFactory, Blocks, BodyBuilder, Builder, Callers,
                 Clause, Codegen, Config, Emit, Expansion, Flatten,
                 Macho, NewParser, Normalise, ObjectInterface, Optimise,
                 Options, Resources, Scanner, Snippets, Types, Unbranch, Util,
                 Version


test-suite wybe-test
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs:   .
  main-is:          Test.hs
  build-depends:    base >=4.6 && <5
                  , array >= 0.5.1.0
                  , HUnit >=1.3.1.0
                  , hspec >=2.2.0
                  , containers
                  , directory >= 1.2.5.0
                  , filepath >= 1.4.0.0
                  , llvm-hs
                  , llvm-hs-pure
                  , mtl
                  , parsec >=3.1.3
                  , transformers
                  , ansi-terminal
                  , Diff
  other-modules: AST, BinaryFactory, Blocks, BodyBuilder, Builder, Callers,
                 Clause, Codegen, Config, Emit, Expansion, Flatten,
                 Macho, NewParser, Normalise, ObjectInterface, Optimise,
                 Options, Resources, Scanner, Snippets, Types, Unbranch, Util,
                 Version
