name:                wybe
version:             0.1.0.0
synopsis:            Wybe compiler and build system.
cabal-version:       1.22.2.0
Category:            Compilers
build-type:          Simple

executable wybemk
  default-language:  Haskell2010
  main-is:           wybemk.hs
  hs-source-dirs:    src
  build-depends: array >= 0.5.1.0
               , base >=4.6
               , binary >= 0.7.5.0
               , bytedump
               , bytestring
               , Cabal
               , containers
               , directory >= 1.2.5.0
               , filepath >= 1.4.0.0
               , flow
               , haskeline
            --    , llvm-party == 12.1.0
            --    , llvm-hs == 9.0.*
            --    , llvm-hs-pure == 9.0.*
            --    , llvm-hs-pretty == 0.9.0.*
               , list-predicate
               , temporary
               , text
               , mtl
               , old-time
               , parsec >=3.1.3
               , process >= 1.4.2.0
               , transformers
               , cryptonite
               , tuple >= 0.3.0.2
               , extra >= 1.5.1
               , ansi-terminal
               , utility-ht
               , Diff
  other-modules: AST, BinaryFactory, BodyBuilder, Builder, Callers,
                 CConfig, Clause, LLVM, Config, Emit, Expansion, Flatten,
                 Macho, Parser, Normalise, ObjectInterface, Optimise,
                 Analysis, AliasAnalysis, Transform,
                 Options, Resources, Scanner, Snippets, Types, Unbranch, UnivSet, Util,
                 Version, ASTShow, Unique, LastCallAnalysis
  extra-libraries: gc
  extra-lib-dirs:/opt/homebrew/lib

test-suite wybe-test
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs:   src
  main-is:          Test.hs
  build-depends:    base >=4.6 && <5
                  , array >= 0.5.1.0
                  , HUnit >=1.3.1.0
                  , hspec >=2.2.0
                  , containers
                  , directory >= 1.2.5.0
                  , filepath >= 1.4.0.0
                --   , llvm-hs
                --   , llvm-hs-pure
                --   , llvm-hs-pretty
                  , mtl
                  , parsec >=3.1.3
                  , transformers
                  , ansi-terminal
                  , utility-ht
                  , Diff
  other-modules: AST, BinaryFactory, BodyBuilder, Builder, Callers,
                 CConfig, Clause, LLVM, Config, Emit, Expansion, Flatten,
                 Macho, Parser, Normalise, ObjectInterface, Optimise,
                 Analysis, AliasAnalysis, Transform,
                 Options, Resources, Scanner, Snippets, Types, Unbranch, Util,
                 Version, ASTShow, Unique
  extra-libraries: gc
  extra-lib-dirs:/opt/homebrew/lib
