name:                wybe
version:             0.1.0.0
synopsis:            Wybe compiler and build system.
cabal-version:       1.22.2.0
Category:            Compilers
build-type:          Simple

executable wybemk
  default-language:  Haskell2010
  main-is:           wybemk.hs
  hs-source-dirs:    src
  build-depends: array >= 0.5.1.0
                , base >=4.6
                , binary >= 0.8.9.1
                , bytedump
                , bytestring >= 0.11.5.3
                , Cabal
                , containers
                , directory >= 1.2.5.0
                , filepath >= 1.4.0.0
                , flow
                , haskeline
                , list-predicate
                , temporary
                , text
                , mtl
                , old-time
                , parsec >=3.1.3
                , process >= 1.4.2.0
                , transformers
                , cryptonite >= 0.30
                , tuple >= 0.3.0.2
                , extra >= 1.5.1
                , ansi-terminal
                , utility-ht
                , Diff
                , extra >= 1.7.14
                , flow >= 2.0.0.4
  other-modules: AST, BinaryFactory, BodyBuilder, Builder, Callers,
                 CConfig, Clause, LLVM, Config, Emit, Expansion,
                 Flatten, Macho, Parser, Normalise, ObjectInterface, Optimise,
                 Analysis, AliasAnalysis, Transform,
                 Options, Resources, Scanner, Snippets, Types, Unbranch,
                 UnivSet, Util, Version, ASTShow, Unique, LastCallAnalysis
  extra-libraries: gc
  extra-lib-dirs:/opt/homebrew/lib

test-suite wybe-test
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  hs-source-dirs:   src
  main-is:          Test.hs
  build-depends: array >= 0.5.1.0
                , base >=4.6
                , binary >= 0.8.9.1
                , bytedump
                , bytestring >= 0.11.5.3
                , Cabal
                , containers
                , directory >= 1.2.5.0
                , filepath >= 1.4.0.0
                , flow
                , haskeline
                , list-predicate
                , temporary
                , text
                , mtl
                , old-time
                , parsec >=3.1.3
                , process >= 1.4.2.0
                , transformers
                , cryptonite >= 0.30
                , tuple >= 0.3.0.2
                , ansi-terminal
                , utility-ht
                , Diff
                , extra >= 1.7.14
                , flow >= 2.0.0.4
                , HUnit >=1.3.1.0
                , hspec >=2.2.0
  other-modules: AST, BinaryFactory, BodyBuilder, Builder, Callers,
                 CConfig, Clause, LLVM, Config, Emit, Expansion,
                 Flatten, Macho, Parser, Normalise, ObjectInterface, Optimise,
                 Analysis, AliasAnalysis, Transform,
                 Options, Resources, Scanner, Snippets, Types, Unbranch,
                 UnivSet, Util, Version, ASTShow, Unique, LastCallAnalysis
  extra-libraries: gc
  extra-lib-dirs:/opt/homebrew/lib
